// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRoutes builds authenticated route components 1`] = `
<Route
  auth={true}
  path="/"
  render={[Function]}
/>
`;

exports[`getRoutes builds redirect components 1`] = `
<Redirect
  from="/from"
  push={false}
  render={[Function]}
  to="/to"
/>
`;

exports[`getRoutes builds route components 1`] = `
<Route
  path="/"
  render={[Function]}
/>
`;
